# Gluino

./: .gitignore  CMakeLists.txt  Gluino.nuspec  Gluino.sln  Makefile  README.md
Gluino/Native/: NativeWindow.cs  NativeWindowOptions.cs
GluinoNative/include/: app.h  window.h
GluinoNative/src/: exports.cpp
dev/SourceGeneration/: LibImportGenerator.cs  SourceGeneration.csproj
dev/SourceGeneration/Properties/: launchSettings.json
dev/TestApp/: Program.cs  TestApp.csproj
dev/TestApp/Properties/: Resources.Designer.cs  Resources.resx
dev/TestApp/wwwroot/: index.html
src/Gluino/: App.cs  Gluino.csproj  Gluino.csproj.DotSettings  Platform.cs  WebResourceRequest.cs  WebResourceResponse.cs  WebView.cs  WebViewBinder.cs  WebViewOptions.cs  Window.cs  WindowBorderStyle.cs  WindowCollection.cs  WindowStyle.cs
src/Gluino.Core/: Gluino.Core.vcxproj  Gluino.Core.vcxproj.filters
src/Gluino.Core/include/: common.h  webview_base.h  webview_events.h  webview_options.h  window_base.h  window_options.h
src/Gluino.Core/src/: exports.cpp
src/Gluino/Events/: NavigationEndEventArgs.cs  NavigationStartEventArgs.cs  WebResourceRequestedEventArgs.cs  WindowClosingEventArgs.cs  WindowStateChangedEventArgs.cs
src/Gluino/Interop/: LibDetailsAttribute.cs  LibImportAttribute.cs  ManagedMember.cs  ManagedProperty.cs  NativeApp.cs  NativeDelegates.cs  NativePoint.cs  NativeRect.cs  NativeSize.cs
src/Gluino/Native/: NativeApp.cs  NativeDelegates.cs  NativeExtensions.cs  NativePoint.cs  NativeRect.cs  NativeWebView.cs  NativeWebViewEvents.cs  NativeWebViewOptions.cs  NativeWindow.cs  NativeWindowEvents.cs  NativeWindowOptions.cs
src/Gluino/Properties/: launchSettings.json
src/Gluino/WebView/: WebResourceRequest.cs  WebResourceResponse.cs  WebView.cs
src/GluinoNative/: .clang-format  GluinoNative.vcxproj  GluinoNative.vcxproj.filters
(+64 files in other folders)
